{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 115,
  "lineage": "6c4cbc5a-ec8e-1c02-25b7-a8871f8a2fcf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5f3fc451d0b9cef",
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:elastic-ip/eipalloc-0a5f3fc451d0b9cef",
            "association_id": "eipassoc-0e0118670ea143314",
            "domain": "vpc",
            "id": "eipalloc-0a5f3fc451d0b9cef",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-09be0559c90bf9eb8",
            "private_dns": "ip-10-1-1-103.ap-northeast-2.compute.internal",
            "private_ip": "10.1.1.103",
            "public_dns": "ec2-3-39-101-165.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.101.165",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "terraform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84022cae37d06b8",
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:elastic-ip/eipalloc-0b84022cae37d06b8",
            "association_id": "eipassoc-0584577e589c68fbb",
            "domain": "vpc",
            "id": "eipalloc-0b84022cae37d06b8",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0031abea42010014d",
            "private_dns": "ip-10-1-2-134.ap-northeast-2.compute.internal",
            "private_ip": "10.1.2.134",
            "public_dns": "ec2-3-34-17-246.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.17.246",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "terraform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c957525810749740",
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:elastic-ip/eipalloc-0c957525810749740",
            "association_id": "eipassoc-0473e70b6f2f9f00d",
            "domain": "vpc",
            "id": "eipalloc-0c957525810749740",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07b273b44f6fa8c06",
            "private_dns": "ip-10-1-3-206.ap-northeast-2.compute.internal",
            "private_ip": "10.1.3.206",
            "public_dns": "ec2-15-164-187-62.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.187.62",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "terraform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b09b6acd8d62254",
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:instance/i-01dff4095128cfe1e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01dff4095128cfe1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8c75ec205ae5bd2",
            "private_dns": "ip-172-31-45-93.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.93",
            "public_dns": "ec2-54-180-106-16.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.106.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "managed_by": "terraform"
                },
                "tags_all": {
                  "managed_by": "terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0de458c1e9e4a372e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-sg20250717022637356700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d55cc0e6baa5c593",
            "tags": {
              "Environment": "Production",
              "Name": "nginx-server"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "nginx-server",
              "managed_by": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0e6198f019c6b40c4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.nginx_sg",
            "tls_private_key.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:internet-gateway/igw-072b459f99675a514",
            "id": "igw-072b459f99675a514",
            "owner_id": "212684282362",
            "tags": {
              "Name": "cwave-igw"
            },
            "tags_all": {
              "Name": "cwave-igw",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5f3fc451d0b9cef",
            "association_id": "eipassoc-0e0118670ea143314",
            "connectivity_type": "public",
            "id": "nat-05e91e33c0aa068e2",
            "network_interface_id": "eni-09be0559c90bf9eb8",
            "private_ip": "10.1.1.103",
            "public_ip": "3.39.101.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ea9338d3e57ca046",
            "tags": {
              "Name": "cwave-nat-a"
            },
            "tags_all": {
              "Name": "cwave-nat-a",
              "managed_by": "terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84022cae37d06b8",
            "association_id": "eipassoc-0584577e589c68fbb",
            "connectivity_type": "public",
            "id": "nat-0b6f5bebdb1854b5e",
            "network_interface_id": "eni-0031abea42010014d",
            "private_ip": "10.1.2.134",
            "public_ip": "3.34.17.246",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0323d8c78261d38d4",
            "tags": {
              "Name": "cwave-nat-b"
            },
            "tags_all": {
              "Name": "cwave-nat-b",
              "managed_by": "terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c957525810749740",
            "association_id": "eipassoc-0473e70b6f2f9f00d",
            "connectivity_type": "public",
            "id": "nat-0c5fcb6fb90e5b2a5",
            "network_interface_id": "eni-07b273b44f6fa8c06",
            "private_ip": "10.1.3.206",
            "public_ip": "15.164.187.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00df87eb51c0ea74c",
            "tags": {
              "Name": "cwave-nat-c"
            },
            "tags_all": {
              "Name": "cwave-nat-c",
              "managed_by": "terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:route-table/rtb-01c4f978376983364",
            "id": "rtb-01c4f978376983364",
            "owner_id": "212684282362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e91e33c0aa068e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cwave-private-rtb-a"
            },
            "tags_all": {
              "Name": "cwave-private-rtb-a",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:route-table/rtb-0893e7d559a196292",
            "id": "rtb-0893e7d559a196292",
            "owner_id": "212684282362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6f5bebdb1854b5e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cwave-private-rtb-b"
            },
            "tags_all": {
              "Name": "cwave-private-rtb-b",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:route-table/rtb-0c8d41aebdff7c4d1",
            "id": "rtb-0c8d41aebdff7c4d1",
            "owner_id": "212684282362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c5fcb6fb90e5b2a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cwave-private-rtb-c"
            },
            "tags_all": {
              "Name": "cwave-private-rtb-c",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:route-table/rtb-003f92e349b626792",
            "id": "rtb-003f92e349b626792",
            "owner_id": "212684282362",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072b459f99675a514",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cwave-public-rtb"
            },
            "tags_all": {
              "Name": "cwave-public-rtb",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029f62c0950de6fad",
            "route_table_id": "rtb-003f92e349b626792",
            "subnet_id": "subnet-023e4659d15f5930e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b1eeece4fbe40b4",
            "route_table_id": "rtb-003f92e349b626792",
            "subnet_id": "subnet-040c97f4f9968504a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f9c87db89da74e2",
            "route_table_id": "rtb-003f92e349b626792",
            "subnet_id": "subnet-03e30b9bad9e30324"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5bc877dc6f4564b",
            "route_table_id": "rtb-003f92e349b626792",
            "subnet_id": "subnet-0ea9338d3e57ca046"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0822d81917e2ed0c9",
            "route_table_id": "rtb-003f92e349b626792",
            "subnet_id": "subnet-0323d8c78261d38d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a84bba4bc9888c18",
            "route_table_id": "rtb-003f92e349b626792",
            "subnet_id": "subnet-00df87eb51c0ea74c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:security-group/sg-07f3466fe40f2cbb9",
            "description": "allow ssh",
            "egress": [],
            "id": "sg-07f3466fe40f2cbb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "212684282362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:security-group/sg-0ecb27a49043ada2c",
            "description": "Allow NFS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecb27a49043ada2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "allow nfs for efs",
            "name_prefix": "",
            "owner_id": "212684282362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:security-group/sg-0e6198f019c6b40c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6198f019c6b40c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-sg20250717022637356700000001",
            "name_prefix": "nginx-sg",
            "owner_id": "212684282362",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a15f47088728a81e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:security-group/sg-0706eb8d243621f7b",
            "description": "allow all ports",
            "egress": [],
            "id": "sg-0706eb8d243621f7b",
            "ingress": [],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "212684282362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:security-group/sg-069de2b51074d1353",
            "description": "allow all ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069de2b51074d1353",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "212684282362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "all ports",
            "from_port": 0,
            "id": "sgrule-760812097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069de2b51074d1353",
            "security_group_rule_id": "sgr-07d4f716516ba406f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-ports-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "all ports",
            "from_port": 0,
            "id": "sgrule-1361729961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069de2b51074d1353",
            "security_group_rule_id": "sgr-0027f76117f1dda41",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-611922435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07f3466fe40f2cbb9",
            "security_group_rule_id": "sgr-0e02ec4c338726846",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow-ssh-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:subnet/subnet-023e4659d15f5930e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023e4659d15f5930e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212684282362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-a",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-a",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:subnet/subnet-040c97f4f9968504a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040c97f4f9968504a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212684282362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-b",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-b",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:subnet/subnet-03e30b9bad9e30324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e30b9bad9e30324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212684282362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-c",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-c",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:subnet/subnet-0ea9338d3e57ca046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea9338d3e57ca046",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212684282362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-a",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/elb": "1",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:subnet/subnet-0323d8c78261d38d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0323d8c78261d38d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212684282362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-b",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-b",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/elb": "1",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:subnet/subnet-00df87eb51c0ea74c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00df87eb51c0ea74c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212684282362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-c",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-c",
              "kubernetes.io/cluster/cwave": "shared",
              "kubernetes.io/role/elb": "1",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:vpc/vpc-06b9069cfb7482025",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e1bc190f9ba5f032",
            "default_route_table_id": "rtb-0b2e18a0e8ddb4e9a",
            "default_security_group_id": "sg-0df99bbd6a754e5be",
            "dhcp_options_id": "dopt-07f24f32627c12139",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b9069cfb7482025",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2e18a0e8ddb4e9a",
            "owner_id": "212684282362",
            "tags": {
              "Name": "cwave-vpc"
            },
            "tags_all": {
              "Name": "cwave-vpc",
              "managed_by": "terraform"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:security-group/sg-099d9dfdf511eb144",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-099d9dfdf511eb144",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d12b6b5df673e7e8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cwave-cluster-20250714024512165900000014",
            "name_prefix": "cwave-cluster-",
            "owner_id": "212684282362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cwave-cluster"
            },
            "tags_all": {
              "Name": "cwave-cluster",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:212684282362:security-group/sg-0d12b6b5df673e7e8",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d12b6b5df673e7e8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d9dfdf511eb144"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d9dfdf511eb144"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d9dfdf511eb144"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d9dfdf511eb144"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d9dfdf511eb144"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-099d9dfdf511eb144"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "cwave-node-20250714024511433500000012",
            "name_prefix": "cwave-node-",
            "owner_id": "212684282362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cwave-node",
              "kubernetes.io/cluster/cwave": "owned"
            },
            "tags_all": {
              "Name": "cwave-node",
              "kubernetes.io/cluster/cwave": "owned",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9069cfb7482025"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3456430415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-099d9dfdf511eb144",
            "security_group_rule_id": "sgr-0e1c3c53983672227",
            "self": false,
            "source_security_group_id": "sg-0d12b6b5df673e7e8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3169392751",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-0395c80e7a49d00c9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-376238768",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-0fc5f6a7bb926ba21",
            "self": false,
            "source_security_group_id": "sg-099d9dfdf511eb144",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-532238094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-059ba84f6099d1f91",
            "self": false,
            "source_security_group_id": "sg-099d9dfdf511eb144",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3606784152",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-0c2530185d026cb36",
            "self": false,
            "source_security_group_id": "sg-099d9dfdf511eb144",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3316061369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-00ef7ebd3752d13fb",
            "self": false,
            "source_security_group_id": "sg-099d9dfdf511eb144",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2701535090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-033127a134a9302bd",
            "self": false,
            "source_security_group_id": "sg-099d9dfdf511eb144",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1800002898",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-0c3ca0291b880852b",
            "self": false,
            "source_security_group_id": "sg-099d9dfdf511eb144",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2557434535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-085afa2f21c3c7a85",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2471685392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-01af6d6983fcbbd9e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-923619071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d12b6b5df673e7e8",
            "security_group_rule_id": "sgr-00657da56e191f8f0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}